@@ -1,3 +1,8 @@
+2010-03-14  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/43362
+	* gfortran.dg/impure_constructor_1.f90: New test.
+
 2010-03-13  Sebastian Pop  <sebastian.pop@amd.com>
 
 	PR middle-end/43354
