@@ -1,3 +1,9 @@
+2010-03-14  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/43362
+	* resolve.c (resolve_structure_cons): Add missing PURE constraint.
+	(resolve_ordinary_assign): Add check to avoid segfault.
+
 2010-03-12  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/43291
